Updated nuextract inference and deployment
NuExtract2 requires specific input structure for text extraction.

--- a/vllm_ocr_model_notebooks/03a_nuextract_deploy_vllm.ipynb
+++ b/vllm_ocr_model_notebooks/03a_nuextract_deploy_vllm.ipynb
@@ -10,29 +10,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "53189d6e-6842-4936-862e-d820eb725266",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sh \n",
-    "apt update\n",
-    "apt-get install -y poppler-utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "ef543d35-d226-47c2-b9ca-680d6c863146",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -129,7 +106,6 @@
    "outputs": [],
    "source": [
     "import shutil\n",
-    "import os\n",
     "\n",
     "# Copy volume cache to local cache if not already there\n",
     "if not os.path.exists(cache_local):\n",
@@ -157,6 +133,78 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "af1d231c-c55f-4cb9-8a0c-8b99efbb52d3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "import base64\n",
+    "from PIL import Image\n",
+    "import requests\n",
+    "from io import BytesIO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "253c061d-a5bc-4e7e-8d35-60181e44df4c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from transformers import AutoProcessor, AutoModelForVision2Seq\n",
+    "import torch\n",
+    "import mlflow.pyfunc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a098a7d3-e0b5-40df-b5d1-81d8f60feff6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sh \n",
+    "apt update\n",
+    "apt-get install -y poppler-utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "6a1d89d4-a81c-4102-ba97-3b1d9e9b853c",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -166,6 +214,27 @@
    "outputs": [],
    "source": [
     "%pip install qwen-vl-utils[decord]>=0.0.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "887c1fd1-b501-43cc-bc7b-2c2aa6ab6253",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pdf2image import convert_from_bytes"
    ]
   },
   {
@@ -210,14 +279,75 @@
     "        self.processor = AutoProcessor.from_pretrained(self.model_id)\n",
     "\n",
     "        self.model = AutoModelForVision2Seq.from_pretrained(\n",
-    "            self.model_id, torch_dtype=self.dtype, device_map=\"auto\"\n",
+    "            self.model_id, dtype=self.dtype, device_map=\"auto\"\n",
     "        )\n",
+    "\n",
+    "    def process_all_vision_info_for_nuextract(self, messages, examples=None):\n",
+    "        \"\"\"\n",
+    "        Process vision information from both messages and in-context examples, supporting batch processing.\n",
+    "        \n",
+    "        Args:\n",
+    "            messages: List of message dictionaries (single input) OR list of message lists (batch input)\n",
+    "            examples: Optional list of example dictionaries (single input) OR list of example lists (batch)\n",
+    "        \n",
+    "        Returns:\n",
+    "            A flat list of all images in the correct order:\n",
+    "            - For single input: example images followed by message images\n",
+    "            - For batch input: interleaved as (item1 examples, item1 input, item2 examples, item2 input, etc.)\n",
+    "            - Returns None if no images were found\n",
+    "        \"\"\"\n",
+    "        from qwen_vl_utils import process_vision_info, fetch_image\n",
+    "        \n",
+    "        # Helper function to extract images from examples\n",
+    "        def extract_example_images(example_item):\n",
+    "            if not example_item:\n",
+    "                return []\n",
+    "                \n",
+    "            # Handle both list of examples and single example\n",
+    "            examples_to_process = example_item if isinstance(example_item, list) else [example_item]\n",
+    "            images = []\n",
+    "            \n",
+    "            for example in examples_to_process:\n",
+    "                if isinstance(example.get('input'), dict) and example['input'].get('type') == 'image':\n",
+    "                    images.append(fetch_image(example['input']))\n",
+    "                    \n",
+    "            return images\n",
+    "        \n",
+    "        # Normalize inputs to always be batched format\n",
+    "        is_batch = messages and isinstance(messages[0], list)\n",
+    "        messages_batch = messages if is_batch else [messages]\n",
+    "        is_batch_examples = examples and isinstance(examples, list) and (isinstance(examples[0], list) or examples[0] is None)\n",
+    "        examples_batch = examples if is_batch_examples else ([examples] if examples is not None else None)\n",
+    "        \n",
+    "        # Ensure examples batch matches messages batch if provided\n",
+    "        if examples and len(examples_batch) != len(messages_batch):\n",
+    "            if not is_batch and len(examples_batch) == 1:\n",
+    "                # Single example set for a single input is fine\n",
+    "                pass\n",
+    "            else:\n",
+    "                raise ValueError(\"Examples batch length must match messages batch length\")\n",
+    "        \n",
+    "        # Process all inputs, maintaining correct order\n",
+    "        all_images = []\n",
+    "        for i, message_group in enumerate(messages_batch):\n",
+    "            # Get example images for this input\n",
+    "            if examples and i < len(examples_batch):\n",
+    "                input_example_images = extract_example_images(examples_batch[i])\n",
+    "                all_images.extend(input_example_images)\n",
+    "            \n",
+    "            # Get message images for this input\n",
+    "            input_message_images = process_vision_info(message_group)[0] or []\n",
+    "            all_images.extend(input_message_images)\n",
+    "        \n",
+    "        return all_images if all_images else None\n",
+    "\n",
     "\n",
     "    def predict(self, model_input: pd.DataFrame, params: dict = None) -> pd.Series:\n",
     "        from qwen_vl_utils import process_vision_info\n",
     "\n",
     "        outputs = []\n",
     "        max_tokens = params.get(\"max_tokens\", 1024) if params else 1024\n",
+    "        template = \"\"\"{\"extracted_text\": \"verbatim-string\"}\"\"\"\n",
     "\n",
     "        for _, row in model_input.iterrows():\n",
     "            system_prompt = row.get(\n",
@@ -234,27 +364,23 @@
     "                outputs.append(f\"Error processing image: {str(e)}\")\n",
     "                continue\n",
     "\n",
-    "            messages = [\n",
-    "                {\"role\": \"system\", \"content\": [{\"type\": \"text\", \"text\": system_prompt}]},\n",
-    "                {\n",
-    "                    \"role\": \"user\",\n",
-    "                    \"content\": [\n",
-    "                        {\"type\": \"image\", \"image\": image},\n",
-    "                        {\"type\": \"text\", \"text\": user_prompt[\"text\"]},\n",
-    "                    ],\n",
-    "                },\n",
-    "            ]\n",
+    "            document = {\"type\": \"image\", \"image\": image}\n",
+    "\n",
+    "            messages = [{\"role\": \"user\", \"content\": [document]}]\n",
     "            \n",
-    "            text = self.processor.apply_chat_template(\n",
-    "                messages, tokenize=False, add_generation_prompt=True\n",
+    "            text = self.processor.tokenizer.apply_chat_template(\n",
+    "                messages,\n",
+    "                template=template,\n",
+    "                tokenize=False,\n",
+    "                add_generation_prompt=True,\n",
     "            )\n",
     "\n",
-    "            image_inputs, video_inputs = process_vision_info(messages)\n",
+    "            image_inputs = self.process_all_vision_info_for_nuextract(messages)\n",
     "\n",
     "            inputs = self.processor(  \n",
     "                text=[text],\n",
     "                images=image_inputs,\n",
-    "                videos=video_inputs,\n",
+    "                # videos=video_inputs,\n",
     "                padding=True,\n",
     "                return_tensors=\"pt\",\n",
     "            ).to(self.device)\n",
@@ -308,8 +434,8 @@
     "pdf_bytes = response.content\n",
     "    \n",
     "pil_images = convert_from_bytes(pdf_bytes)\n",
-    "\n",
     "img = pil_images[0]\n",
+    "\n",
     "buffer = BytesIO()\n",
     "img.save(buffer, format=\"PNG\")\n",
     "image_base64 = base64.b64encode(buffer.getvalue()).decode('utf-8')\n",
@@ -350,11 +476,29 @@
     "    def __init__(self, artifacts):\n",
     "        self.artifacts = artifacts\n",
     "\n",
-    "olmocr = NuExtractPyfunc()\n",
-    "olmocr.load_context(Context({\"model-weights\": cache_local}))\n",
-    "\n",
-    "output = olmocr.predict(df, params={\"max_tokens\": 512})\n",
-    "\n",
+    "nuextract = NuExtractPyfunc()\n",
+    "nuextract.load_context(Context({\"model-weights\": cache_local}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6202450b-4f71-442b-9631-0b9a597aab58",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "output = nuextract.predict(df, params={\"max_tokens\": 512})\n",
     "print(output[0])"
    ]
   },
@@ -362,10 +506,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "bed1fb5f-25be-45d2-8a52-b96ac87c1a8b",
      "showTitle": false,
@@ -458,14 +599,14 @@
     "        # conda_env=\"conda.yaml\",\n",
     "        pip_requirements=[\n",
     "            \"torch==2.6.0\",\n",
-    "            \"transformers==4.55.4\",\n",
+    "            \"transformers==4.56.1\",\n",
     "            \"accelerate==1.10.1\",\n",
     "            \"huggingface_hub==0.34.4\",\n",
     "            \"Pillow==11.3.0\",\n",
     "            \"flask==3.1.2\",\n",
     "            \"bitsandbytes==0.47.0\",\n",
     "            \"pdf2image==1.17.0\",\n",
-    "            \"qwen-vl-utils==0.0.8\"\n",
+    "            \"qwen-vl-utils==0.0.11\"\n",
     "        ],\n",
     "        # extra_pip_requirements=package_versions,  \n",
     "        artifacts={\n",
@@ -558,10 +699,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "ad93fb49-284a-4af6-af9c-cafbda133a79",
      "showTitle": false,
@@ -672,10 +810,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "fa5d0fb1-0989-4dd6-aa70-95f30c920d7a",
      "showTitle": false,
@@ -754,10 +889,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "12c22bfb-9ffc-414f-8299-85e7d91462dd",
      "showTitle": false,
@@ -906,10 +1038,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "d103b8c4-4a87-4874-97ee-97688e7857e8",
      "showTitle": false,
@@ -946,10 +1075,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "bfaca348-18a1-4ff4-a8ee-5037389a935e",
      "showTitle": false,
@@ -1112,7 +1238,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 2254899697800615,
+     "commandId": 6040444310334433,
      "dataframes": [
       "_sqldf"
      ]
