NuExtract2 Text Extraction Support (#11)
* Updated Configs

* Updated gitignore

* Updated sample configs and started deployment notebook

* Updated deployment notebook and config files

Split sample configs based on model / model type
Updated test inference to have the correct variables
Updated deploy VLLM with pyfunc class for proper deployment

* Updated endpoint testing

* Updated files to support nuextract 2 8b

* Updated NuExtract files with deployment pending

* Updated nuextract inference and deployment

NuExtract2 requires specific input structure for text extraction.

---------

Co-authored-by: willsmithDB <willsmithDB>

--- a/vllm_ocr_model_notebooks/02a_nuextract_test_inference.ipynb
+++ b/vllm_ocr_model_notebooks/02a_nuextract_test_inference.ipynb
@@ -299,41 +299,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "30ba2054-21a6-4681-b29c-7dedc0e74b64",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "system_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
-    "prompt = \"Extract the entire text from the abstract section in this image.\"\n",
-    "\n",
-    "messages=[\n",
-    "        {\n",
-    "            \"role\": \"system\",\n",
-    "            \"content\": [{\"type\":\"text\",\"text\": system_prompt}]\n",
-    "        },\n",
-    "        {\n",
-    "            \"role\": \"user\", \n",
-    "            \"content\": [{\"type\": \"image\", \"image\": pil_images[0]},\n",
-    "             \n",
-    "                        {\"type\": \"text\", \"text\": prompt}]\n",
-    "        }\n",
-    "            ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "e3a1628f-15c2-48d3-a8f2-7138157f4563",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -351,7 +316,7 @@
     "    template=template,\n",
     "    tokenize=False,\n",
     "    add_generation_prompt=True,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -436,8 +401,7 @@
     "output_text = processor.batch_decode(\n",
     "    generated_ids_trimmed, skip_special_tokens=True, clean_up_tokenization_spaces=False\n",
     ")\n",
-    "print(output_text)\n",
-    "# ['{\"store\": \"Trader Joe\\'s\"}']"
+    "print(output_text)"
    ]
   },
   {
@@ -490,7 +454,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 2254899697799887,
+     "commandId": 6040444310331973,
      "dataframes": [
       "_sqldf"
      ]
@@ -504,7 +468,7 @@
      "nuid": "65870d79-6cfc-41b9-bd1a-2550fd885416",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "config.yaml",
+      "defaultValue": "nuextract_config",
       "label": "Configuration File",
       "name": "config",
       "options": {
@@ -515,7 +479,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "config.yaml",
+      "defaultValue": "nuextract_config",
       "label": "Configuration File",
       "name": "config",
       "options": {
