Updated deployment with test invocation

--- a/vllm_ocr_model_notebooks/03a_nuextract_deploy_vllm.ipynb
+++ b/vllm_ocr_model_notebooks/03a_nuextract_deploy_vllm.ipynb
@@ -911,30 +911,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "3ce320fb-2602-4091-9ee6-5b5e1310d436",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "databricks_token = dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get()\n",
-    "os.environ[\"DATABRICKS_TOKEN\"] = databricks_token\n",
-    "\n",
-    "endpoint_url = \"CHANGE_ME\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "091dc325-2880-4e43-b01b-fe3da81c7530",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -949,20 +925,17 @@
     "from PIL import Image\n",
     "import requests\n",
     "from io import BytesIO\n",
-    "from pdf2image import convert_from_bytes\n",
     "\n",
-    "url = \"https://arxiv.org/pdf/2502.13923\"\n",
+    "url = \"https://bpb-us-e1.wpmucdn.com/blogs.cornell.edu/dist/8/7752/files/2020/10/Screen-Shot-2020-10-07-at-1.35.57-PM.png\"\n",
     "response = requests.get(url)\n",
-    "pdf_bytes = response.content\n",
-    "    \n",
-    "pil_images = convert_from_bytes(pdf_bytes)\n",
-    "system_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
-    "prompt = \"Extract the entire text from the abstract section in this image.\"\n",
+    "img = Image.open(BytesIO(response.content)).convert(\"RGB\")\n",
     "\n",
-    "img = pil_images[0]\n",
     "buffer = BytesIO()\n",
     "img.save(buffer, format=\"PNG\")\n",
     "image_base64 = base64.b64encode(buffer.getvalue()).decode('utf-8')\n",
+    "\n",
+    "system_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
+    "prompt = \"Extract the entire text from the abstract section in this image.\"\n",
     "\n",
     "df = pd.DataFrame({\n",
     "    \"system_prompt\": [system_prompt],\n",
@@ -973,6 +946,29 @@
     "        }\n",
     "    ]\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3ce320fb-2602-4091-9ee6-5b5e1310d436",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "databricks_token = dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get()\n",
+    "os.environ[\"DATABRICKS_TOKEN\"] = databricks_token\n",
+    "endpoint_url = \"CHANGE_ME\""
    ]
   },
   {
@@ -1003,7 +999,7 @@
     "    return {'inputs': {name: data[name].tolist() for name in data.keys()} if isinstance(data, dict) else data.tolist()}\n",
     "\n",
     "def score_model(dataset):\n",
-    "    url = endpoint_url,\n",
+    "    url = endpoint_url\n",
     "    headers = {'Authorization': f'Bearer {os.environ.get(\"DATABRICKS_TOKEN\")}', 'Content-Type': 'application/json'}\n",
     "    ds_dict = {'dataframe_split': dataset.to_dict(orient='split')} if isinstance(dataset, pd.DataFrame) else create_tf_serving_json(dataset)\n",
     "    data_json = json.dumps(ds_dict, allow_nan=True)\n",
@@ -1228,7 +1224,13 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
